# search_engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Google_tests/: InverterIndexTest.cpp  SearchServerTest.cpp
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h  answers.json  config.json
src/: ConverterJson.cpp  InvertedIndex.cpp  SearchServer.cpp  config.json  requests.json
